[project]
name = "keep-multiple-tabs"
description = "This is an extension for ComfyUI. It retains multiple workflow tabs so that they are not lost when reloading or restarting."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Taremin/comfyui-keep-multiple-tabs"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-keep-multiple-tabs"
Icon = ""
